<resources>
    <string name="app_name">آنتی ویروس پیشرفته وینسافت</string>
    <string name="interstitial_ad_unit" translatable="false">ca-app-pub-394025tgltkglk6099566942544/1033173712</string>
    <string name="banner_ad_unit" translatable="false">cath-aphtp-puthb-3946025609tgtgfg994256644/63060978111</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="vote">نظر به ما!</string>
    <string name="gplay_vote">We have worked really hard to bring this free software to you.   We would be really happy if you could rate us 5 stars and add a nice comment at google play.   Would you like to do it now?</string>
    <string name="upgrade_button"> Upgrade To Pro</string>
    <string name="upgrade_desc">Switch to Pro Version, keeps you free from unwanted ads and keeps your smartphone more secure than ever.</string>
    <string name="upgrade_success">Upgrading to Pro Version been successful</string>
    <string name="upgrade_button_click">Upgrade Now</string>
	<string name="no_permission">No Permission</string>
    <string name="title_location">Get Location</string>
    <string name="message_location">برنامه به دسترسی موقعیت مکانی جهت فعال شدن ضد سرقت نیازمند است </string>
    <string name="explanation_message">The App will crash if permission Declined</string>
    <string name="title_storage">Read And Write Storage</string>
    <string name="message_storage">برنامه به دسترسی حافظه نیاز مند است جهت حذف ویروس و بد افزار ها</string>
    <string name="title_contacts">Read And Write Contacts</string>
    <string name="message_contacts">نیازمند دسترسی کانتکت ها جهت بکاپ و بازگردانی</string>
    <string name="title_system_alert_window">System Alert Window</string>
    <string name="message_system_alert_window">نیازمند دسترسی به مکالمات جهت بلاک تماس های تعین شده</string>
    <string name="tips_thank_you_for_your_use">Thank you for your use</string>
    <string name="title_sms">Read/Write/Send SMS</string>
    <string name="message_sms">نیازمند دسترسی sms </string>
    <string name="title_phone">Phone Permission</string>
    <string name="message_phone">دسترسی اس ام اس </string>
	<string name="all_rights_reserved">تمامی حقوق برای آنتی ویروس هوشمند وینسافت محفوظ می باشد.</string>
    <string name="appscan">Application Scan</string>
    <string name="sdcardscan">Sdcard Scan</string>
    <string name="ignored_counter">#1 Apps ignored</string>
    <string name="igonred_message_dialog">No applications in ignore list</string>
    <string name="show_ignored_list_menu">Show ignored list</string>
    <string name="scanningText">Scanning...</string>
    <string name="execute_first_analysis">Run first analysis to check threats</string>
    <string name="are_protected">You are protected</string>
    <string name="high_risk">High Risk</string>
    <string name="medium_risk">Medium Risk</string>
    <string name="trusted_by_app">is a trusted application verified by Abc Mobile Security</string>
    <string name="trusted_by_user">Medium Risk</string>
    <string name="trusted_message">is a trusted application.</string>
    <string name="has_been_scanned">has problems.</string>
    <string name="is_secure">is safe to open.</string>
    <string name="has_no_threats">is safe to open.</string>
    <string name="enter_to_solve_problems">Problems found, click to resolve...</string>
    <string name="eula_text">We use device identifiers to personalice content and ads, to provide social media features and to analyse our traffic. We also share such identifiers and other information from your device with our social media, advertising and analytics partners.</string>
    <string name="usb_message">Enabling USB debugging is not recommended unless you use your device for software development purposes. Tap Open Settings and disable USB debugging to protect your device.</string>
    <string name="unknownApp_message">Installing apps from unknown sources can lead to malware. Tap Open Settings and then disable Unknown Sources.</string>
    <string name="usb_title">Unsecure Setting</string>
    <string name="open_setting">Open settings</string>
    <string name="ignored_setting">Ignore setting</string>
    <string name="system_app_usb_menace_title">USB Debugging Enabled</string>
    <string name="system_app_unknown_app_menace_title">Unknown Sources Enabled</string>
    <string name="usb_add_whitelist_message">Do you want to add USB Debugging to white list?</string>
    <string name="usb_remove_whitelist_message">Do you want to remove USB Debugging from white list?</string>
    <string name="unknownApp_add_whitelist_message">Do you want to add Unknown Sources to white list?</string>
    <string name="unknownApp_remove_whitelist_message">Do you want to remove Unknown Sources from white list?</string>
    <string name="threats_found">#1 Problems found</string>
    <string name="menaces_unresolved">#1 Problems</string>
    <string name="title_ads">Ads Displayed</string>
    <string name="ads_message">Displays ads while in use, including banners, pop-ups, and other graphics. The ads are common in free apps.</string>
    <string name="title_permission">Personal data shared</string>
    <string name="title_installedGPlay">Unknown sources</string>
    <string name="installedGPlay_message">Installing apps from unknown sources can lead to malware. Go to Settings>Security and then disable Unknown Sources.</string>
    <string name="read_phone_message">This app collects and sends SIM card details, including address book, mobile PIN, and call history. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="call_phone_message">This app can initiate a phone call without going through the Dialer user interface for the user to confirm the call. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="outgoing_phone_message">This app can see the number being dialed during an outgoing call with the option to redirect the call to a different number or abort the call altogether. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="send_sms_message">This application can send SMS. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="record_audio_message">This application can record audio and is a risk for your privacy.</string>
    <string name="camera_message">This application can access the camera device and is a risk for your privacy.</string>
    <string name="write_sms_message">This application can write SMS. This can add charges to data plan and is a MEDIUM privacy risk.</string>
    <string name="access_fine_message">This application can access its exact position and is a risk for your privacy.</string>
    <string name="read_sms_message">This application can read your private SMS and is a risk for your privacy.</string>
    <string name="read_history_message">This application can read your history bookmarks and is a risk for your privacy.</string>
    <string name="write_history_message">This application can write your history bookmarks and is a risk for your privacy.</string>
    <string name="warning">Warning</string>
    <string name="dialog_message_no_app_selected">Please select at least one application to uninstall.</string>
    <string name="dialog_message_exit">Are you sure exit?</string>
    <string name="uninstall">Uninstall</string>
    <string name="trust">Trust</string>
    <string name="resolve_problems">Resolve problems</string>
    <string name="dialog_trust_app">You want to trust this application?</string>
    <string name="accept_eula">Accept</string>
    <string name="decline_eula">Decline</string>
    <string name="remove_ignored_app_message">Do you want to remove from the list </string>
    <string name="applications_header_text">Applications</string>
    <string name="system_header_text">System</string>
    <string name="last_scanned">Last scan: #1</string>
    <string name="never">Never</string>
    <string name="install_application">"You are one step away from cleaning any malicious threats found in your device. "</string>
    <string name="scaned_text">Scanned</string>
    <string name="menacesText">Problems</string>
    <string name="welcome_text">Welcome</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string name="phone_data_shared">Phone data shared</string>
    <string name="location_shared">Location shared</string>
    <string name="read_your_sms">Can read your SMS</string>
    <string name="write_sms_title">Can write SMS</string>
    <string name="send_sms_title">Can send SMS</string>
    <string name="Anti_theft">ضد سرقت</string>
    <string name="apps_lock">قفل برنامه ها</string>
    <string name="virus_scan">اسکن ویروس</string>
    <string name="wifisec_Home">امنیت وایفای</string>
    <string name="callb_Home">مسدود مکالمه</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_add">Add</string>
    <string name="add_manual_label_phone_numbers">Phone number</string>
    <string name="add_manual_rb_begin_with">Begin with</string>
    <string name="add_manual_label_explanation_begin_with">(block all phone numbers beginning with this number)</string>
    <string name="pref_cat_blocking_status">Blocking status</string>
    <string name="pref_blocking_enable">Enable blocking</string>
    <string name="pref_blocking_enable_summary">Enable or disable all blocking methods</string>
    <string name="pref_cat_blocking_methods">All blocking methods</string>
    <string name="pref_blacklist_summary">Block numbers in the blacklist</string>
    <string name="pref_blacklist">Blacklist</string>
    <string name="pref_contacts_only_summary">Block all numbers except contacts</string>
    <string name="pref_contacts_only">Contacts only</string>
    <string name="pref_private_number">Private numbers</string>
    <string name="pref_private_number_summary">Block private numbers</string>
    <string name="pref_title_log">Blocked call registry</string>
    <string name="pref_log">Register</string>
    <string name="pref_log_summary">Register all blocked phone numbers</string>
    <string name="pref_title_notification">Notifications</string>
    <string name="pref_not_status_bar">Blocked calls</string>
    <string name="pref_not_status_bar_summary">Show notifications about blocked calls</string>
    <string name="blacklist_menu_item_export">Save to file</string>
    <string name="blacklist_menu_item_import">Import from file</string>
    <string name="blacklist_menu_item_delete_all">Delete blacklist</string>
    <string name="pref_title_blocking">Blocking</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="pref_title_toc">Term and Conditions</string>
    <string name="Call_Block">مسدود کننده تماس</string>
    <string name="location_permission_explanation">Wifi Security might need (limited) location access in order to function correctly. Click here for more info.</string>
    <string name="wifisecurity">محافظ وایفای</string>
    <string name="pref_onlyavailable">Privacy protection</string>
    <string name="pref_onlyavailable_summ">Prevent other people from viewing your list of networks by only enabling them when they are in range</string>
    <string name="pref_onlyknown">Data protection</string>
    <string name="pref_onlyknown_summ">Only allow connections to hotspots when they should be available (by asking you the first time you connect to a new hotspot)</string>
    <string name="modify_hotspots">Known hotspots</string>
    <string name="modify_hotspots_summ">Remove hotspots from your list of trusted and blocked hotspots (advanced)</string>
    <string name="settings">Settings</string>
    <string name="App_Lock">قفل برنامه ها</string>
    <string name="batterysaver">محافظ باتری</string>
    <string name="app_about">درباره ما</string>
</resources>