<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/blackListMnDeleteAll"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/blacklist_menu_item_delete_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/blackListMnExport"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/blacklist_menu_item_export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/blackListMnImport"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/blacklist_menu_item_import"
        app:showAsAction="never"/>

</menu>