<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/card_normal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/card1"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            tools:ignore="NestedWeights">

            <com.vinsasoft.security.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/antivirusicon"
                card:card_name="@string/virus_scan" />


        </RelativeLayout>

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#19000000" />

        <RelativeLayout
            android:id="@+id/card2"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">


            <com.vinsasoft.security.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/antithefticon"
                card:card_name="@string/Anti_theft" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/card3"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">


            <com.vinsasoft.security.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/applockericon"
                card:card_name="@string/apps_lock" />

        </RelativeLayout>

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#19000000" />

        <RelativeLayout
            android:id="@+id/card4"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">


            <com.vinsasoft.security.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/wifiicon"
                card:card_name="@string/wifisec_Home" />


        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/card5"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">


            <com.vinsasoft.security.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/callblockericon"
                card:card_name="@string/callb_Home" />

        </RelativeLayout>

        <View
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:background="#19000000" />

        <RelativeLayout
            android:id="@+id/card6"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0">


            <com.vinsasoft.security.view.ItemCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                card:card_image="@drawable/batterysavericon"
                card:card_name="@string/batterysaver" />


        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="#19000000" />

</LinearLayout>