<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/mainEnd">


        <ImageView
            android:id="@+id/imgv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@drawable/wifisecurityicon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgv"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/wifisecurity"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            android:id="@+id/admob_adview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit">


        </com.google.android.gms.ads.AdView>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_permission_explanation"
        android:id="@+id/location_notice"
        android:background="#dcedc8"
        android:padding="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:onClick="openLocationNotice" />

    <FrameLayout
        android:id="@+id/inflatable_prefs"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:theme="@style/Switch_style"></FrameLayout>
</LinearLayout>