<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_BackgroundAnimationProgress"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/mainEnd">


        <ImageView
            android:id="@+id/imgv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@drawable/upgrade_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgv"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/upgrade_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_above="@+id/subscribeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp">


        <RelativeLayout
            android:id="@+id/card1"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:text="@string/upgrade_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <RelativeLayout
        android:id="@+id/superContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/color_BackgroundAnimationProgress">

        <RelativeLayout
            android:id="@+id/successfulbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible">

            <ImageView
                android:id="@+id/animationNoMenacesFoundPanelImageView"
                android:layout_width="95dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/upgrade_button" />

            <Button
                android:id="@+id/subscribeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/animationNoMenacesFoundPanelImageView"
                android:background="@drawable/resolve_button_selector"
                android:onClick="onClick"
                android:text="@string/upgrade_button_click"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffffff"
                android:textSize="20dp"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>

